--- a/assets/scss/editor.scss
+++ b/assets/scss/editor.scss
@@ -132,3 +132,24 @@
     }
 }
 
+.wp-block[data-type="core/buttons"] {
+
+    .block-editor-inner-blocks {
+        width: 100%;
+    }
+
+    &[data-align="center"] {
+
+        .block-editor-block-list__layout {
+            justify-content: center;
+        }
+    }
+
+    &[data-align="right"] {
+
+        .block-editor-block-list__layout {
+            justify-content: flex-end;
+        }
+    }
+}
+
