--- a/blocks.css
+++ b/blocks.css
@@ -837,8 +837,8 @@
   align-items: center;
   justify-content: flex-start;
   margin-top: calc(-1 * var(--theme-spacing)); }
-  .wp-block-buttons[class][class] > .wp-block,
-  .wp-block-buttons[class][class] > .wp-block-button {
+  .wp-block-buttons[class][class] .wp-block,
+  .wp-block-buttons[class][class] .wp-block-button {
     margin-left: 0;
     margin-right: var(--theme-spacing);
     margin-top: var(--theme-spacing); }
@@ -851,14 +851,14 @@
       margin-right: 0; }
   .wp-block-buttons[class][class].aligncenter {
     justify-content: center; }
-    .wp-block-buttons[class][class].aligncenter > .wp-block,
-    .wp-block-buttons[class][class].aligncenter > .wp-block-button {
+    .wp-block-buttons[class][class].aligncenter .wp-block,
+    .wp-block-buttons[class][class].aligncenter .wp-block-button {
       margin-left: calc( var(--theme-spacing) / 2);
       margin-right: calc( var(--theme-spacing) / 2); }
   .wp-block-buttons[class][class].alignright {
     justify-content: flex-end; }
-    .wp-block-buttons[class][class].alignright > .wp-block,
-    .wp-block-buttons[class][class].alignright > .wp-block-button {
+    .wp-block-buttons[class][class].alignright .wp-block,
+    .wp-block-buttons[class][class].alignright .wp-block-button {
       margin-left: var(--theme-spacing);
       margin-right: 0; }
   .wp-block-buttons[class][class] .wp-block-button__link[class] {
